<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignatureActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilResponsible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:hint="@string/hint_responsible"
            android:id="@+id/atvResponsible"
            android:inputType="textCapWords"
            android:textAllCaps="true"
            android:nextFocusForward="@id/etPosition"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignatureSave"
        android:text="@string/signature_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSignatureClear"
        android:text="@string/signature_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>