<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        android:fitsSystemWindows="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilQR"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etQR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_qr_code"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnCaptureQR"
                    android:src="@drawable/ic_camera_alt_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btnCheckQR"
                    android:src="@drawable/ic_remove_red_eye_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPatrimonial"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etPatrimonial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_patrimonial_code"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnCapturePatrimonial"
                    android:src="@drawable/ic_camera_alt_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/btnTakeByPatrimonial"
                    android:src="@drawable/ic_gps_fixed_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinnerOldYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/old_code_years"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOldCode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/etOldCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Código antiguo"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnCaptureOldCode"
                    android:src="@drawable/ic_camera_alt_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btnTakeByOldCode"
                    android:src="@drawable/ic_gps_fixed_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkEtiquetado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="El item está etiquetado" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDescription"
                    android:hint="@string/hint_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etColor"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_color"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etBrand"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_brand"
                    android:singleLine="true"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etModel"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_model"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etSeries"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_series"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDimLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDimLong"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_dim_long"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDimWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDimWidth"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_dim_width"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDimHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etDimHigh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_dim_high"
                    android:inputType="number"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerPreservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/preservation_options"
                android:spinnerMode="dialog"
                android:prompt="@string/preservation_prompt"/>

            <CheckBox
                android:id="@+id/checkOperative"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_operative"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilObservation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etObservation"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:hint="@string/hint_observation"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>